--- a/src/demo-class/17.scss
+++ b/src/demo-class/17.scss
@@ -6,18 +6,17 @@
 
 .demo-layout__playground--light {
   @include bfg-card(primary, (
-    header-borderless: true,
-    header-border: #ddd,
-    header-background: #f6f6f6,
+    header-border-color: #ddd,
+    header-background-color: #f6f6f6,
   ));
 }
 
 .demo-layout__playground--dark {
   @include bfg-card(primary, (
-    header-border: #4a4a4a,
-    header-background: #3a3a3a,
+    header-border-color: #4a4a4a,
+    header-background-color: #3a3a3a,
 
-    content-border: #4a4a4a,
-    content-background: #2a2a2a,
+    content-border-color: #4a4a4a,
+    content-background-color: #2a2a2a,
   ));
 }
