Improve overall demo

--- a/src/styles/demo.scss
+++ b/src/styles/demo.scss
@@ -59,10 +59,6 @@ a {
   color: $demo-link;
 }
 
-main {
-  display: block; // For IE11
-}
-
 *::selection {
   background-color: #FFECB3 !important; // Overwrite "prismjs"
 }
@@ -98,6 +94,15 @@ main {
     border-radius: 3px; // From "primer-markdown"
     background-color: rgba(27,31,35,0.05); // From "primer-markdown"
   }
+}
+
+.demo-layout__full-page-button {
+  display: inline-block;
+  width: 1rem;
+  height: 1rem;
+  margin-left: 0.5rem;
+  vertical-align: super;
+  background-image: url(../images/external-link.svg);
 }
 
 .demo-layout__back-button {
